# ltl_footstep_planner

./: CMakeLists.txt  MPFC2024.py  MPFC20242.py  MPFC20243.py  MPFC20243_footstepCons.py  README.md  computeCoM.py  footstep2ComTra2D.py  footstep2ComTra3D.py  footstep_planar2.cpp  footstep_planner.py  footstep_planner2.py  footstep_planner_contact_ordering_specs.py  footstep_planner_reachability.py  model_iis.ilp  model_palnar_v1.cpp  model_plannar.cpp  model_plannar_ankle.cpp  mpfc_infeasible.ilp  realtime_palnner.py  test_plot.py
include/: doublelayer_planning.hpp  monolithic_planner.hpp
src/: doublelayer_planning.cpp  main.cpp  monolithic_main.cpp  monolithic_planner.cpp  test_plot.cpp  初始alip状态推导过程.md
